# EasyRasterizer

./: .gitignore  CMakeLists.txt  README.md  kk.cpp  shadowmap.tga  zbuild.bat  zrun.bat
src/: main.cpp  model.cpp  model.h  settings.h
src/core/: component.h  data_structure.h  data_structure.hpp  entity.h  image.h  scene.h  shader.h  system.h  tgaimage.cpp  tgaimage.h  time.h
src/module1/: main.cpp
src/utils/: convert.h  loader.h  math.h  model.cpp  model.h  operation.cpp  operation.h  tgaimage.cpp  tgaimage.h  timer.h
